<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 FTC Inc. All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Dummy content. -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lb_pager_info"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_toRightOf="@+id/lb_pager_info"
                android:id="@+id/lb_check_name"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <!--<ImageView-->
                <!--android:id="@+id/status_image"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:src="@drawable/ic_ok" />-->

            <TextView
                android:id="@+id/lb_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/lb_status"/>



        </RelativeLayout>



        <LinearLayout
            android:id="@+id/feel_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:lineSpacingMultiplier="1.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/lb_feel_item" />


            <RadioGroup android:id="@+id/rdg_feel"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >
                <RadioButton android:id="@+id/rb_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/holo_blue_light"
                    android:text="@string/lb_feel_ok" />

                <RadioButton android:id="@+id/rb_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/holo_red_light"
                    android:text="@string/lb_feel_error"

                    />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/record_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">





            <!-- 上方列 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- 左列 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium"
                        android:text="@string/lb_record" />


                    <EditText
                        android:id="@+id/txt_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_record"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:inputType="number|phone" />

                </LinearLayout>

                <!-- 右列 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:lineSpacingMultiplier="1.2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_small"
                            android:text="@string/lb_standard_value" />

                        <TextView
                            android:id="@+id/lb_standar_value"
                            android:lineSpacingMultiplier="1.2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_small"/>

                    </LinearLayout>


                    <!-- 上限 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:lineSpacingMultiplier="1.2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_small"
                            android:text="@string/lb_upper" />

                        <TextView
                            android:id="@+id/lb_hight_value"
                            android:textSize="@dimen/text_size_small"
                            android:lineSpacingMultiplier="1.2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                    <!-- 下限 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:lineSpacingMultiplier="1.2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_small"
                            android:text="@string/lb_lower" />

                        <TextView
                            android:id="@+id/lb_low_value"
                            android:lineSpacingMultiplier="1.2"
                            android:textSize="@dimen/text_size_small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <TextView
                android:lineSpacingMultiplier="1.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/lb_comment" />

            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
            <LinearLayout
                android:focusable="true" android:focusableInTouchMode="true"
                android:layout_width="0px" android:layout_height="0px"/>

            <!-- :nextFocusUp and :nextFocusLeft have been set to the id of this component
                    to prevent the dummy from receiving focus again -->

            <EditText
                android:id="@+id/txt_comment"
                android:hint="@string/hint_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/txt_comment"
                android:nextFocusLeft="@id/txt_comment"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:lineSpacingMultiplier="1.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/lb_abnornal" />

            <Spinner
                android:id="@+id/sp_abnornal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:lineSpacingMultiplier="1.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:text="@string/lb_deal" />

            <Spinner
                android:id="@+id/sp_deal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View style="@style/DividerHorizontal" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_camera"
            android:text="@string/btn_take_photo"
            />



        <Gallery
            android:id="@+id/gallery_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



    </LinearLayout>



</ScrollView>
