<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2014 FTC Inc. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_marginTop="@dimen/text_margin_meduim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/top_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/text_margin_meduim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_release_note" />

        <TextView
            android:id="@+id/release_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:id="@+id/btn_cancel"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_no_corner"
            android:text="@string/action_not_now"
            android:textColor="#4A4A4A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button android:id="@+id/btn_ok"
            android:layout_weight="1"
            android:background="@drawable/btn_gray_no_corner"
            android:text="@string/action_install"
            android:textColor="#4A4A4A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>