
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_gradient">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="45dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_form_rounded"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/txtAccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@null"
                    android:hint="@string/hint_account"
                    android:padding="5dp"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword|number"
                    android:password="true"
                    android:padding="5dp" />

                <Spinner
                    android:id="@+id/sp_shift"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="5dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/bg_button_rounded"
                android:text="@string/lb_login"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_size_medium"
                android:orientation="horizontal">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_download"

                    />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_settings"

                    />
            </LinearLayout>
        </LinearLayout>

        <!--<TextView -->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/lb_setting"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:layout_marginBottom="25dp"-->
        <!--android:textColor="@color/white"/>-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lb_copy_right"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:textColor="@color/white"/>

    </RelativeLayout>
</merge>

